--- a/WebApiTestToDo/WebApiTestToDo.csproj
+++ b/WebApiTestToDo/WebApiTestToDo.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Models\Hotel.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\AuthenticateHotelUsers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
