--- a/WebApiTestToDoTests/WebApiTestToDoTests.csproj
+++ b/WebApiTestToDoTests/WebApiTestToDoTests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest2.cs" />
     <Compile Include="UnitTest3.cs" />
+    <Compile Include="UnitTestHotelDetails.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WebApiTestToDo\WebApiTestToDo.csproj">
