--- a/WebApiTestToDo/WebApiTestToDo.csproj
+++ b/WebApiTestToDo/WebApiTestToDo.csproj
@@ -100,21 +100,30 @@
     <Compile Include="Models\ClientAuthenticateRemote.cs" />
     <Compile Include="Models\DataSource.cs" />
     <Compile Include="Models\HotelAmenity.cs" />
+    <Compile Include="Models\HotelDetailsDescription.cs" />
     <Compile Include="Models\HotelImage.cs" />
+    <Compile Include="Models\HotelImages.cs" />
     <Compile Include="Models\HotelListcs.cs" />
     <Compile Include="Models\HotelRoom.cs" />
+    <Compile Include="Models\HotelRoomDetails.cs" />
+    <Compile Include="Models\HotelRooms.cs" />
     <Compile Include="Models\HotelSearch.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\HotelDetails.cs" />
+    <Compile Include="Models\HotelDescription.cs" />
     <Compile Include="Models\hotelsummary.cs" />
+    <Compile Include="Models\hotelSummaryDetails.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Logging\DatabaseLogger.cs" />
     <Compile Include="Models\Logging\FileLogger.cs" />
     <Compile Include="Models\Logging\ILogger.cs" />
     <Compile Include="Models\Logging\Logger.cs" />
     <Compile Include="Models\Logging\LoggingTypes.cs" />
+    <Compile Include="Models\PropertyAmenities.cs" />
+    <Compile Include="Models\PropertyAmenity.cs" />
+    <Compile Include="Models\RoomAmenities.cs" />
+    <Compile Include="Models\RoomAmenity.cs" />
     <Compile Include="Models\summryList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\AuthenticateHotelUsers.cs" />
