--- a/WebApiTestToDo/WebApiTestToDo.csproj
+++ b/WebApiTestToDo/WebApiTestToDo.csproj
@@ -125,12 +125,16 @@
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jquery.signalR-2.1.2.js" />
     <Content Include="Scripts\jquery.signalR-2.1.2.min.js" />
+    <Content Include="Scripts\script.js" />
     <Content Include="SignalRDemo.html" />
     <Content Include="tests.html" />
     <Content Include="Search.html" />
     <Content Include="indexorig.html" />
     <Content Include="index.html" />
     <Content Include="Results.html" />
+    <Content Include="Views\about.html" />
+    <Content Include="Views\contact.html" />
+    <Content Include="Views\home.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
