--- a/WebApiTestToDo/WebApiTestToDo.csproj
+++ b/WebApiTestToDo/WebApiTestToDo.csproj
@@ -132,34 +132,44 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SampleGuitatApp\details.html" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\img\Acoustic.jpg" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\img\Bass.jpg" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\img\Electric.jpg" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\index.html" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\js\controllers.js" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\lib\Angular\angular.min.js" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\styles.css" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\img\Acoustic.jpg" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\img\Bass.jpg" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\img\Electric.jpg" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\index.html" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\js\app.js" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\js\controllers.js" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\lib\Angular\angular-route.min.js" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\lib\Angular\angular.min.js" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\partials\list.html" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\styles.css" />
-    <Content Include="SampleGuitatApp\img\Acoustic.jpg" />
-    <Content Include="SampleGuitatApp\img\Bass.jpg" />
-    <Content Include="SampleGuitatApp\img\Electric.jpg" />
-    <Content Include="SampleGuitatApp\index.html" />
-    <Content Include="SampleGuitatApp\js\app.js" />
-    <Content Include="SampleGuitatApp\js\controllers.js" />
-    <Content Include="SampleGuitatApp\lib\Angular\angular-route.min.js" />
-    <Content Include="SampleGuitatApp\lib\Angular\angular.min.js" />
-    <Content Include="SampleGuitatApp\partials\list.html" />
-    <Content Include="SampleGuitatApp\sampleGitarApp.html" />
+    <Content Include="Sample\img\Acoustic.jpg" />
+    <Content Include="Sample\img\Bass.jpg" />
+    <Content Include="Sample\img\Electric.jpg" />
+    <Content Include="Sample\index.html" />
+    <Content Include="Sample\js\app.js" />
+    <Content Include="Sample\js\controllers.js" />
+    <Content Include="Sample\lib\Angular\angular-route.min.js" />
+    <Content Include="Sample\lib\Angular\angular.min.js" />
+    <Content Include="Sample\partials\list.html" />
+    <Content Include="Sample\styles.css" />
+    <Content Include="SampleGuitarApp\partials\details.html" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\img\Acoustic.jpg" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\img\Bass.jpg" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\img\Electric.jpg" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\index.html" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\js\controllers.js" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\lib\Angular\angular.min.js" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\styles.css" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\img\Acoustic.jpg" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\img\Bass.jpg" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\img\Electric.jpg" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\index.html" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\js\app.js" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\js\controllers.js" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\lib\Angular\angular-route.min.js" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\lib\Angular\angular.min.js" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\partials\list.html" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\styles.css" />
+    <Content Include="SampleGuitarApp\img\Acoustic.jpg" />
+    <Content Include="SampleGuitarApp\img\Bass.jpg" />
+    <Content Include="SampleGuitarApp\img\Electric.jpg" />
+    <Content Include="SampleGuitarApp\index.html" />
+    <Content Include="SampleGuitarApp\js\app.js" />
+    <Content Include="SampleGuitarApp\js\controllers.js" />
+    <Content Include="SampleGuitarApp\lib\Angular\angular-route.min.js" />
+    <Content Include="SampleGuitarApp\lib\Angular\angular.min.js" />
+    <Content Include="SampleGuitarApp\partials\list.html" />
+    <Content Include="SampleGuitarApp\xsampleGitarApp.html" />
     <Content Include="angularsParamsWorking.html" />
     <Content Include="angularsWorking.html" />
     <Content Include="angularsParams.html" />
@@ -169,19 +179,20 @@
     <Content Include="HotelDetails.html" />
     <Content Include="error.html" />
     <Content Include="error500.html" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding.rar" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing.rar" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\img\Thumbs.db" />
-    <Content Include="SampleGuitatApp\Guitar Application - Data Binding\js\data.json" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\img\Thumbs.db" />
-    <Content Include="SampleGuitatApp\Guitar Application - Routing\js\data.json" />
-    <Content Include="SampleGuitatApp\js\data.json" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding.rar" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing.rar" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\img\Thumbs.db" />
+    <Content Include="SampleGuitarApp\Guitar Application - Data Binding\js\data.json" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\img\Thumbs.db" />
+    <Content Include="SampleGuitarApp\Guitar Application - Routing\js\data.json" />
+    <Content Include="SampleGuitarApp\js\data.json" />
+    <Content Include="Sample\js\data.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="angulars.html" />
     <Content Include="indexAngTestsWorking.html" />
     <Content Include="indexAngTests.html" />
     <Content Include="InterActive.html" />
-    <Content Include="SampleGuitatApp\styles.css" />
+    <Content Include="SampleGuitarApp\styles.css" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\application-configuration.js" />
     <Content Include="Scripts\complaints.js" />
@@ -283,7 +294,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="sampledata\" />
-    <Folder Include="SampleGuitatApp\libangular\" />
+    <Folder Include="SampleGuitarApp\libangular\" />
+    <Folder Include="Sample\libangular\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
