--- a/WebApiTestToDo/bin/WebApiTestToDo.dll.config
+++ b/WebApiTestToDo/bin/WebApiTestToDo.dll.config
@@ -34,7 +34,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings><add name="NorthwindEntities" connectionString="metadata=res://*/ProductsDataStore.csdl|res://*/ProductsDataStore.ssdl|res://*/ProductsDataStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MURU;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MyTestDBEntities" connectionString="metadata=res://*/ModelComplaints.csdl|res://*/ModelComplaints.ssdl|res://*/ModelComplaints.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MURU;initial catalog=MyTestDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MyTestDBEntities1" connectionString="metadata=res://*/ModelComplaint.csdl|res://*/ModelComplaint.ssdl|res://*/ModelComplaint.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MURU;initial catalog=MyTestDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="NorthwindEntities" connectionString="metadata=res://*/ProductsDataStore.csdl|res://*/ProductsDataStore.ssdl|res://*/ProductsDataStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MURU;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyTestDBEntities" connectionString="metadata=res://*/ModelComplaints.csdl|res://*/ModelComplaints.ssdl|res://*/ModelComplaints.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MURU;initial catalog=MyTestDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyTestDBEntities1" connectionString="metadata=res://*/ModelComplaint.csdl|res://*/ModelComplaint.ssdl|res://*/ModelComplaint.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MURU;initial catalog=MyTestDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 
   <runtime>
 
